test/invalid/NoExtends/NoExtends.plume
/**
 * @author 35237, Marcos Vasco
 */
class NoExtends BinaryLogicalOperation is
  
  method calculate : (val1 : Boolean, val2 : Boolean) -> Boolean is
    if val1 == false || val2 == true then false
    else true